# Manipulator_study

./: 1_torch_basic.ipynb  3_binary_classification.ipynb  4_multiclass_classification.ipynb  8_multiclass_classification_CIFAR10_aug.ipynb  9_VGGnet_test.ipynb  README.md
arduinobot_controller/: CMakeLists.txt  package.xml
arduinobot_controller/config/: arduinobot_controllers.yaml
arduinobot_controller/launch/: controller.launch.py
arduinobot_cpp_example/: 1_torch_basic.ipynb  CMakeLists.txt  package.xml
arduinobot_cpp_example/src/: simple_parameter.cpp  simple_publisher.cpp
arduinobot_description/: CMakeLists.txt  package.xml
arduinobot_description/launch/: display.launch.py  gazebo.launch.py
arduinobot_description/rviz/: display.rviz
arduinobot_description/urdf/: arduinobot.urdf.xacro  arduinobot_gazebo.xacro  arduinobot_ros2_control.xacro
arduinobot_msgs/: CMakeLists.txt  package.xml
arduinobot_msgs/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
arduinobot_msgs/srv/: AddTwoInts.srv
arduinobot_py_example/: package.xml  setup.cfg  setup.py
arduinobot_py_example/arduinobot_py_example/: simple_parameter.py  simple_publisher.py  simple_service_server.py  simple_subscriber.py
install/: local_setup.sh  setup.sh
install/arduinobot_py_example/share/arduinobot_py_example/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
